  is given to those.

* spelling-add-local adds words for a given language to the document's local spelling
  dictionary.

* spelling-remove-local removes words for a given language from the document's local
  spelling dictionary.

* index-tag-all adds a copy of the index entry under cursor to after all occurrences of the
  word that precedes the index inset.
  
* inset-insert-copy inserts the inset's content (in ToC pane) at the position of the cursor.

* inset-split is a new convenience function that splits an inset into two at the given
  cursor position. This is only implemented for text insets currently.

* tabular-style-insert: Insert a table in a specified style.

* tab-group-next, tab-group-previous: Activate another tab group in split view.
  The new functions bound to F6/S-F6 in CUA bindings.


!!!The following LyX functions have been changed in 2.4:

* citation-insert now returns a list of undefined citations if passed through the LyX Server.

* file-insert: optional second parameter "ignorelang" to make the insertion
  ignore the inserted file's main language (and rather adapt it to the insertion
  context's language).

* info-insert buffer vcs-*: renamed to info-insert vcs *

* set-graphics-group was renamed to graphics-set-group.

* tabular-feature: added toggle parameters "toggle-all-lines", "toggle-border-lines"
  and "toggle-inner-lines"

* word-delete-forward, word-delete-backward, char-delete-forward,
  char-delete-backward

  The 2.4 behavior of these functions is almost equivalent to the
  pre-2.3 behavior: without argument, it just deletes the
  next/previous element; with the "confirm" argument however, big
  insets are selected on the first call and deleted only on the
  second. This new behavior allow scripts to work intuitively and
  require the argument only for interactive use.


!!!The following LyX functions have been removed in 2.4:

* date-insert: obsoleted by info-insert date.
